Closed Bug 1162766 Opened 9 years ago Closed 9 years ago

Fix more bad implicit constructors in js

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox40 --- affected
firefox41 --- fixed

People

(Reporter: poiru, Assigned: poiru)

References

Details

Attachments

(1 file)

See bug 1009631.
Attachment #8603040 - Flags: review?(evilpies)
Comment on attachment 8603040 [details] [diff] [review]
Fix more bad implicit constructors in js

Review of attachment 8603040 [details] [diff] [review]:
-----------------------------------------------------------------

Interesting, did non-debug code slip through?
Attachment #8603040 - Flags: review?(evilpies) → review+
https://hg.mozilla.org/mozilla-central/rev/8bcd2e511413
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: