Bug 1162766 - Fix more bad implicit constructors in js. r=evilpie